examples/ZenohCS/NativeMethods.cs

using System.Runtime.InteropServices;

namespace Zenoh;

public static unsafe partial class NativeMethods
    {
        const string __DllName = "zenohc.dll";



        /// <summary>
        ///  Constructs an empty view slice.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_view_slice_empty", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void z_view_slice_empty(z_view_slice_t* this_);

        /// <summary>
        ///  Constructs a `len` bytes long view starting at `start`.
        ///
        ///  @return -1 if `start == NULL` and `len &gt; 0` (and creates an empty view slice), 0 otherwise.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_view_slice_from_buf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern sbyte z_view_slice_from_buf(z_view_slice_t* @this, byte* start, nuint len);

        /// <summary>
        ///  Borrows view slice.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_view_slice_loan", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_slice_t* z_view_slice_loan(z_view_slice_t* this_);

        /// <summary>
        ///  @return ``true`` if the slice is not empty, ``false`` otherwise.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_view_slice_is_empty", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool z_view_slice_is_empty(z_view_slice_t* this_);

        /// <summary>
        ///  Constructs an empty `z_owned_slice_t`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_slice_empty", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void z_slice_empty(z_owned_slice_t* this_);

        /// <summary>
        ///  Constructs an empty `z_owned_slice_t`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_internal_slice_null", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void z_internal_slice_null(z_owned_slice_t* this_);

        /// <summary>
        ///  Frees the memory and invalidates the slice.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_slice_drop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void z_slice_drop(z_moved_slice_t* this_);

        /// <summary>
        ///  Borrows slice.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_slice_loan", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_slice_t* z_slice_loan(z_owned_slice_t* this_);

        /// <summary>
        ///  Constructs an owned copy of a slice.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_slice_clone", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void z_slice_clone(z_owned_slice_t* dst, z_loaned_slice_t* this_);

        /// <summary>
        ///  @return ``true`` if slice is not empty, ``false`` otherwise.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_internal_slice_check", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool z_internal_slice_check(z_owned_slice_t* this_);

        /// <summary>
        ///  @return the length of the slice.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_slice_len", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern nuint z_slice_len(z_loaned_slice_t* this_);

        /// <summary>
        ///  @return the pointer to the slice data.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_slice_data", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* z_slice_data(z_loaned_slice_t* this_);

        /// <summary>
        ///  @return ``true`` if slice is empty, ``false`` otherwise.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_slice_is_empty", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool z_slice_is_empty(z_loaned_slice_t* this_);

        /// <summary>
        ///  Constructs a slice by copying a `len` bytes long sequence starting at `start`.
        ///
        ///  @return -1 if `start == NULL` and `len &gt; 0` (creating an empty slice), 0 otherwise.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_slice_copy_from_buf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern sbyte z_slice_copy_from_buf(MaybeUninit* @this, byte* start, nuint len);

        /// <summary>
        ///  Constructs a slice by transferring ownership of `data` to it.
        ///  @param this_: Pointer to an uninitialized memoery location where slice will be constructed.
        ///  @param data: Pointer to the data to be owned by `this_`.
        ///  @param len: Number of bytes in `data`.
        ///  @param deleter: A thread-safe delete function to free the `data`. Will be called once when `this_` is dropped. Can be NULL, in case if `data` is allocated in static memory.
        ///  @param context: An optional context to be passed to the `deleter`.
        ///
        ///  @return -1 if `start == NULL` and `len &gt; 0` (creating an empty slice), 0 otherwise.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_slice_from_buf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern sbyte z_slice_from_buf(MaybeUninit* @this, byte* data, nuint len, delegate* unmanaged[Cdecl]<void*, void*, void> drop, void* context);

        /// <summary>
        ///  Frees memory and invalidates `z_owned_string_t`, putting it in gravestone state.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_string_drop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void z_string_drop(z_moved_string_t* this_);

        /// <summary>
        ///  @return ``true`` if `this_` is a valid string, ``false`` if it is in gravestone state.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_internal_string_check", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool z_internal_string_check(z_owned_string_t* this_);

        /// <summary>
        ///  Constructs owned string in a gravestone state.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_internal_string_null", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void z_internal_string_null(z_owned_string_t* this_);

        /// <summary>
        ///  @return ``true`` if view string is valid, ``false`` if it is in a gravestone state.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_view_string_is_empty", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool z_view_string_is_empty(z_view_string_t* this_);

        /// <summary>
        ///  Constructs an empty owned string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_string_empty", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void z_string_empty(z_owned_string_t* this_);

        /// <summary>
        ///  Constructs an empty view string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_view_string_empty", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void z_view_string_empty(z_view_string_t* this_);

        /// <summary>
        ///  Borrows string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_string_loan", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_string_t* z_string_loan(z_owned_string_t* this_);

        /// <summary>
        ///  Borrows view string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_view_string_loan", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_string_t* z_view_string_loan(z_view_string_t* this_);

        /// <summary>
        ///  Constructs an owned string by copying `str` into it (including terminating 0), using `strlen` (this should therefore not be used with untrusted inputs).
        ///
        ///  @return -1 if `str == NULL` (and creates a string in a gravestone state), 0 otherwise.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_string_copy_from_str", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern sbyte z_string_copy_from_str(z_owned_string_t* this_, byte* str);

        /// <summary>
        ///  Constructs an owned string by copying a `str` substring of length `len`.
        ///
        ///  @return -1 if `str == NULL` and `len &gt; 0` (and creates a string in a gravestone state), 0 otherwise.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_string_copy_from_substr", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern sbyte z_string_copy_from_substr(z_owned_string_t* @this, byte* str, nuint len);

        /// <summary>
        ///  Constructs an owned string by transferring ownership of a null-terminated string `str` to it.
        ///  @param this_: Pointer to an uninitialized memory location where an owned string will be constructed.
        ///  @param value: Pointer to a null terminated string to be owned by `this_`.
        ///  @param deleter: A thread-safe delete function to free the `str`. Will be called once when `str` is dropped. Can be NULL, in case if `str` is allocated in static memory.
        ///  @param context: An optional context to be passed to the `deleter`.
        ///  @return -1 if `str == NULL` and `len &gt; 0` (and creates a string in a gravestone state), 0 otherwise.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_string_from_str", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern sbyte z_string_from_str(z_owned_string_t* @this, byte* str, delegate* unmanaged[Cdecl]<void*, void*, void> drop, void* context);

        /// <summary>
        ///  Constructs a view string of `str`, using `strlen` (this should therefore not be used with untrusted inputs).
        ///
        ///  @return -1 if `str == NULL` (and creates a string in a gravestone state), 0 otherwise.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_view_string_from_str", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern sbyte z_view_string_from_str(z_view_string_t* @this, byte* str);

        /// <summary>
        ///  Constructs a view string to a specified substring of length `len`.
        ///
        ///  @return -1 if `str == NULL` and `len &gt; 0` (and creates a string in a gravestone state), 0 otherwise.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_view_string_from_substr", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern sbyte z_view_string_from_substr(z_view_string_t* @this, byte* str, nuint len);
